// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a relative change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5F667D",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    12.0%
     
    
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 0,
          "width": 0,
        },
      ]
    }
  />
  <svg
    color="#1A9550"
    data-file-name="SvgArrowDown"
    height={16}
    strokeWidth={2}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "225deg",
          },
        ],
      }
    }
    width={16}
  />
</View>
`;

exports[`renders placeholders with absolute change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5F667D",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    12.0%
     
    ($100.00)
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 0,
          "width": 0,
        },
      ]
    }
  />
  <svg
    color="#1A9550"
    data-file-name="SvgArrowDown"
    height={16}
    strokeWidth={2}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "225deg",
          },
        ],
      }
    }
    width={16}
  />
</View>
`;

exports[`renders placeholders without a change 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5F667D",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    -
     
    
  </Text>
</View>
`;
